@@ -1,0 +1,10 @@
+# proc comment
+proc simple1
+
+class tcl_class
+
+itcl::class itcl_class
+
+public method method1
+protected method method2
+private method method3
